# juntando-os-dados-e-adicionando-o-streamlit-catolicos

./: Pagina_Principal.py  README.md  pyproject.toml  requirements.txt
bruno/: dados_veneza.py  padronizacao.py
pages/: Bruno_Marqueze.py  Gustavo_Queiroz.py  Gustavo_Soares.py  Rafael_Trindade.py  Wesley_Kasteller.py  wesley.py
queiroz/: queiroz.py
rafael/: adapt.py  veneza.py
soares/: counter.py  getDados.py  pradonize.py
wesley/: counter.py  wesley.py
